<resources>
    <!-- Global -->
    <string name="app_name">Rendez-vous Géolocalisé</string>

    <!-- Titre des activites -->
    <string name="title_new_rdv_activity">Nouveau rendez-vous</string>

    <!-- MainActivity -->
    <string name="btn_new_rdv_text">Créer un rendez-vous</string>

    <!-- NewRendezvousActivity -->
    <string name="label_contact_list">Contact(s) pour le rendez-vous</string>

    <string name="btn_preview_msg">Prévisualiser</string>
    <string name="btn_send_rdv">Envoyer</string>
    <string name="add_msg_rdv">Ajouter un message</string>
    <string name="label_location">Lieu du rendez-vous</string>
    <string name="default_location">…</string>
    <string name="error_permission_map">Vous devez autorisez l accès à la localisation.</string>
    <string name="label_date_time">Date et heure du rendez-vous</string>
    <string name="label_time">Heure :</string>
    <string name="default_time">…</string>
    <string name="label_date">Date :</string>
    <string name="default_date">…</string>

    <string name="error_date">La date est requise.</string>
    <string name="error_time">L\'heure est requise.</string>
    <string name="error_location">Le lieu est requis.</string>
    <string name="error_contact">Contact incorrect ou inexistant.</string>
    <string name="error_permission_sms">Envoi du sms impossible les droits sont requis</string>

    <!-- PreferenceActivity -->
    <string name="title_activity_preference">Mes préferences</string>
    <string name="label_phone">Votre numéro de téléphone</string>
    <string name="btn_validate_settings">Valider mes préférences</string>

    <!-- Clé pour les SharedPreferences -->
    <string name="settings_phone">settings_phone</string>
    <string name="shared_preference">com.rendez_vous_geo.settings</string>
    <string name="menu_item_preference">Préférences</string>
    <string name="error_contact_list">Les contacts ne sont pas valide.</string>
    <string name="extra_message_validation">message_valide</string>
    <string name="label_username">Votre nom</string>
    <string name="settings_username">settings_username</string>
    <string name="error_number_size">Le numéro de téléphone saisi est invalide. Il doit contenir 10 numéros</string>
    <string name="extra_message_preference">Préférences sauvegardées</string>
    <string name="nouveau_rendez_vous_re_u">Nouveau rendez-vous reçu</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone :</string>
    <string name="addresse">Addresse :</string>
    <string name="date">Date :</string>
    <string name="heure">Heure :</string>
    <string name="ouvrir_dans_google_maps">Ouvrir dans Google Maps</string>
    <string name="refuser">Refuser</string>
    <string name="accepter">Accepter</string>

</resources>
