<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/view_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_list"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contact_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" />

            <ImageButton
                android:id="@+id/btn_add_contact"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="+"
                android:onClick="addContactAction"
                android:src="@drawable/ic_add_box_24px"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_contact"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible" />

    </LinearLayout>

    <!-- Ajout de la locatisation -->
    <LinearLayout
        android:id="@+id/view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@+id/view_contact">

        <TextView
            android:id="@+id/label_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_location"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addLocationAction"
            android:text="@string/default_location" />


        <TextView
            android:id="@+id/error_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_location"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/view_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@+id/view_location">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/message"
            android:text="@string/add_msg_rdv"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@id/view_message">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date_time"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/date_picker"
                    android:text="@string/label_date"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray" />

                <Button
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/default_date"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/time_picker"
                    android:text="@string/label_time"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray" />

                <Button
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/default_time"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/error_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_date"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/error_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_time"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:onClick="previewAction"
            android:text="@string/btn_preview_msg"
            android:textColor="@android:color/primary_text_dark"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="sendRendezvousAction"
            android:text="@string/btn_send_rdv"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>